# MOSAICS

./: CMakeLists.txt  LICENSE  README.md  install_commands
examples/leaflet_finder/: lf_parameters.prm
examples/membrane_thickness/: gl_12.crd  podl.crd  popx.crd
scripts/: flip.gnu  flip_singles.gnu  get_mask_plots.sh  get_vid_plots.sh  get_vid_plots_ss.sh  heatmap_template.gnu  heatmap_template_video.gnu  heatmap_template_video_ss.gnu  msd.gnu  traj.tcl
src/MosAT/program_variables/: pv_2d_enrichment.h  pv_2d_kinetics.h  pv_3d_enrichment.h  pv_apl.h  pv_apl_3d.h  pv_atom_select.h  pv_atomic_density_3d.h  pv_atomic_rmsf.h  pv_atoms_in_2_planes.h  pv_b_stamp.h  pv_b_stamp_grid.h  pv_bilayer_z.h  pv_check_broken_mols.h  pv_contact_analysis.h  pv_contact_kinetics.h  pv_contact_rmsf.h  pv_dihedrals.h  pv_distances.h  pv_fragment_mapping.h  pv_h_bond_kinetics.h  pv_h_bonds.h  pv_inter_leaflet_contacts.h  pv_inter_leaflet_contacts_3d.h  pv_interdigitation.h  pv_ion_permeation.h  pv_lipid_contacts.h  pv_lipid_contacts_3d.h  pv_lipid_density.h  pv_lipid_density_3d.h  pv_lipid_distances.h  pv_lipid_distances_3d.h  pv_lipid_flip.h  pv_lipid_gyration.h  pv_lipid_h_bonds.h  pv_lipid_immobilization.h  pv_lipid_mixing.h  pv_lipid_msd.h  pv_lipid_orientation.h  pv_lipid_orientation_3d.h  pv_lipid_protein_min_dist.h  (+28 more)
src/MosAT/programs/: .atomic_rmsf.cpp.swp  .lipid_density_3d.cpp.swp  2d_enrichment.cpp  2d_kinetics.cpp  3d_enrichment.cpp  apl.cpp  apl_3d.cpp  atom_select.cpp  atomic_density_3d.cpp  atomic_rmsf.cpp  atoms_in_2_planes.cpp  b_stamp.cpp  b_stamp_grid.cpp  bilayer_z.cpp  check_broken_mols.cpp  contact_analysis.cpp  contact_kinetics.cpp  contact_rmsf.cpp  dihedrals.cpp  distances.cpp  fragment_mapping.cpp  h_bond_kinetics.cpp  h_bonds.cpp  inter_leaflet_contacts.cpp  inter_leaflet_contacts_3d.cpp  interdigitation.cpp  ion_permeation.cpp  lipid_contacts.cpp  lipid_contacts_3d.cpp  lipid_density.cpp  (+42 more)
src/gmx_lib/: README  gmx_bool.h  gmx_def.h  gmx_fit.h  gmx_pdb.h  gmx_util.h  gmx_vec.h
src/headers/: array.h  atom_select.h  binding_events.h  binding_events_common_routines.h  command_line_args.h  command_line_args_mpi.h  common_routines.h  common_routines_mpi.h  contacts.h  contacts_full.h  debug.h  file_io.h  file_io_variable.h  file_naming.h  file_naming_mpi.h  file_reader.h  fit.h  force_serial.h  grid.h  grid_3d.h  grid_io.h  grid_lt.h  grid_lt_common_routines_mpi.h  histo.h  index.h  leaflet_finder.h  linear_algebra.h  mosat_routines.h  multi_dim_vec.h  parallel.h  param.h  performance.h  protein.h  protein_finder.h  ref.h  sol_finder.h  switch.h  traj.h  vector_mpi.h  voronoi.h
src/other_tools/: 2d_enrichment_distance_projection.cpp  2d_kinetics_distance_projection_global.cpp  2d_kinetics_distance_projection_window.cpp  2d_kinetics_percent_visited.cpp  bilayer_free_energy.cpp  binding_contributors.cpp  binding_events_analyzer.cpp  binding_events_analyzer_single.cpp  binding_events_merger.cpp  binding_events_number_lipids_visited.cpp  binding_events_video.cpp  binding_extractor.cpp  binding_lipids.cpp  binding_list.cpp  binding_occupancy.cpp  binding_time_line.cpp  bonds_generator.cpp  data_averager.cpp  data_averager.cpp.bkp  delta_plot.cpp  grid_addition.cpp  grid_data_excluder.cpp  grid_distance_projection.cpp  grid_editor.cpp  grid_region_integrator.cpp  histogram.cpp  leaflet_averager.cpp  lipid_exchange.cpp  lipid_exchange_distances.cpp  mask_maker.cpp  mean_coords_row_selector.cpp  midplane.cpp  nan_selector.cpp  orientation_histogram.cpp  protein_mask.cpp  protein_mask_grower.cpp  running_average.cpp  single_frame_distributions.cpp  single_frame_error.cpp  solvation_shells.cpp
(+7 files in other folders)
